--- a/src/static/css/tiltometer.css
+++ b/src/static/css/tiltometer.css
@@ -26,6 +26,14 @@
     font-family: "Swiftel";
 }
 
+
+body {
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 #header {
     position: fixed;
     top: 0;
@@ -52,4 +60,60 @@
 
 #content {
     padding-top: 50px;
+}
+
+#tiltometer-section {
+    background: rgb(25, 25, 25); /* The Fallback */
+    background: rgba(25, 25, 25, 0.5);
+}
+
+#show-stats-button {
+    background-color: #ff6900;
+}
+
+#stats-section{
+    width: 80%;
+    margin: auto;
+    display: none;
+}
+
+table {
+    color: #333;
+    /* font-family: Helvetica, Arial, sans-serif; */
+    width: 100%;
+    border-collapse:
+    collapse; border-spacing: 0;
+}
+
+td, th {
+    border: 1px solid transparent; /* No visible border */
+    height: 30px;
+    transition: all 0.3s;  /* Simple transition for hover effect */
+}
+
+th {
+    background: #DFDFDF;  /* Darken header a bit */
+    font-weight: bold;
+    text-align: center;
+}
+
+td {
+    background: #FAFAFA;
+    text-align: center;
+}
+
+/* Cells in even rows (2,4,6...) are one color */
+tr:nth-child(even) td { background: #F1F1F1; }
+
+/* Cells in odd rows (1,3,5...) are another (excludes header cells)  */
+tr:nth-child(odd) td { background: #FEFEFE; }
+
+/* Hover cell effect! */
+/* tr td:hover { background: #666; color: #FFF; }  */
+
+
+#gauge{
+    width: 80%;
+    height: 500px;
+    margin: auto;
 }
