--- a/src/static/css/tiltometer.css
+++ b/src/static/css/tiltometer.css
@@ -27,11 +27,24 @@
 }
 
 
-body {
+#fixed-background {
+    z-index: -99999;
+    position: fixed;
+    height: 100%;
+    width:100%;
+    left:0;
+    top:0;
+
+}
+
+#background-image {
+    height: 100%;
+    width:100%;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 #header {
@@ -69,44 +82,70 @@ body {
 
 #show-stats-button {
     background-color: #ff6900;
+    margin: auto;
+    display: block;
+    width: 100%;
+    outline: none;
 }
 
 #stats-section{
-    width: 80%;
+    width: 100%;
     margin: auto;
     display: none;
 }
 
 table {
-    color: #333;
     /* font-family: Helvetica, Arial, sans-serif; */
     width: 100%;
-    border-collapse:
-    collapse; border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
+    color: white;
+    table-layout: fixed;
 }
 
 td, th {
-    border: 1px solid transparent; /* No visible border */
-    height: 30px;
+    border-bottom: 1px solid #666; /* No visible border */
+    /* height: 30px; */
     transition: all 0.3s;  /* Simple transition for hover effect */
+    background-color: rgba(100, 100, 100);
+    background-color: rgba(100, 100, 100, 0.75);
 }
 
 th {
-    background: #DFDFDF;  /* Darken header a bit */
+    /* background: #DFDFDF;   */
     font-weight: bold;
     text-align: center;
+    padding: 12px 0;
 }
 
 td {
-    background: #FAFAFA;
+    /* background: #FAFAFA; */
     text-align: center;
+    width
 }
 
+/* td:nth-child(1) {
+    width: 120px;
+} */
+
+td:nth-child(3) {
+    font-weight: bolder;
+    /* font-size: 15pt; */
+    color: yellow;
+}
+
+.champion-logo {
+    width: 100%;
+}
+
+.win-lose-logo {
+    width: 50%;
+}
 /* Cells in even rows (2,4,6...) are one color */
-tr:nth-child(even) td { background: #F1F1F1; }
+/* tr:nth-child(even) td { background: #F1F1F1; } */
 
 /* Cells in odd rows (1,3,5...) are another (excludes header cells)  */
-tr:nth-child(odd) td { background: #FEFEFE; }
+/* tr:nth-child(odd) td { background: #FEFEFE; } */
 
 /* Hover cell effect! */
 /* tr td:hover { background: #666; color: #FFF; }  */
