--- a/src/templates/tiltometer.html
+++ b/src/templates/tiltometer.html
@@ -5,7 +5,10 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
         <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/tiltometer.css') }}">
     </head>
-    <body>
+    <body class="container">
+        <div id="fixed-background">
+            <div id="background-image"></div>
+        </div>
 
         <div id="header" class="header clear-fix">
             <p class="text-center">
@@ -21,7 +24,7 @@
 
             <p class="clearfix"></p>
 
-            <button id="show-stats-button" role="button" type="button" class="btn btn-warning">Stats</button>
+            <button id="show-stats-button" role="button" type="button" class="btn-lg btn-warning">Stats</button>
 
             <p class="clearfix"></p>
 
@@ -34,22 +37,22 @@
                             <th>KDA</th>
                             <th>Time</th>
                             <th>Mode</th>
-                            <th></th>
+                            <th colspan="2"></th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for item in data.stats %}
                             <div class=flash>{{ message }}</div>
                             <tr>
-                                <td><img src="{{ item.champion_img }}" alt=""></td>
+                                <td><img class="champion-logo" src="{{ item.champion_img }}" alt=""></td>
                                 <td>{{ item.position }}</td>
                                 <td>{{ item.kills }}/{{ item.deaths }}/{{ item.assists }}</td>
                                 <td>{{ item.time }}</td>
                                 <td>{{ item.game_type }}</td>
                                 {% if item.win %}
-                                    <td><img src="{{ url_for('static', filename='img/victory_logo.png') }}" alt="victory"></td>
+                                    <td colspan="2"><img class="win-lose-logo" src="{{ url_for('static', filename='img/victory.png') }}" alt="victory"></td>
                                 {% else %}
-                                    <td><img src="{{ url_for('static', filename='img/defeat_logo.png') }}" alt="defeat"></td>
+                                    <td colspan="2"><img class="win-lose-logo" src="{{ url_for('static', filename='img/defeat.png') }}" alt="defeat"></td>
                                 {% endif %}
                             </tr>
                         {% endfor %}
