--- a/src/templates/tiltometer.html
+++ b/src/templates/tiltometer.html
@@ -3,7 +3,7 @@
     <head>
         <title>tilt-o-meter</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-        <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/tiltometer.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/tiltometer.css') }}">
     </head>
     <body class="container">
         <div id="fixed-background">
@@ -12,7 +12,7 @@
 
         <div id="header" class="header clear-fix">
             <p class="text-center">
-                <a href="{{ url_for('index') }}" class="twallery-font">tilt-o-meter</a>
+                <a href="{{ url_for('index') }}" class="tilt-font">tilt-o-meter</a>
             </p>
         </div><!-- /header -->
         <hr>
