--- a/tiltometer/static/css/tiltometer.css
+++ b/tiltometer/static/css/tiltometer.css
@@ -47,6 +47,7 @@
     -o-background-size: cover;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: right top;
 }
 
 #header {
