--- a/tiltometer/templates/index.html
+++ b/tiltometer/templates/index.html
@@ -13,9 +13,9 @@
         </div><!-- /header -->
         <div id="get-tilt-form">
             <fieldset class="form-group">
-                <label id="summoner-label" for="summoner-name">Enter summoner name</label>
-                <input id="summoner-text-input" type="text" class="form-control" id="summoner-name" placeholder="xPeke">
-                <button id="summoner-input-button" type="button" class="btn-lg btn-warning" role="button" host="http://{{ request.host }}">Measure Tilt!</button>
+                <!-- <label id="summoner-label" for="summoner-name">Enter summoner name</label> -->
+                <input id="summoner-text-input" type="text" class="form-control" id="summoner-name" placeholder="Enter summoner name">
+                <button id="summoner-input-button" type="button" class="btn-lg btn-warning" role="button" host="http://{{ request.host }}">Calculate Tilt!</button>
             </fieldset>
         </div>
     </body>
