Added new domain.host handling for nginx/ec2 problems

--- a/tiltometer/templates/index.html
+++ b/tiltometer/templates/index.html
@@ -36,6 +36,9 @@
             </form>
         </div>
     </body>
+    <script type="text/javascript">
+        $HOST = "{{ host }}";
+    </script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-1.12.4.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/index.js') }}"></script>
 </html>
