--- a/tiltometer/templates/404.html
+++ b/tiltometer/templates/404.html
@@ -21,12 +21,11 @@
                         <p>Oops</p>
                         <p>Something went wrong.</p>
                     {% endif %}
-                    <a href="{{ host }}" role="button" type="button" class="btn-lg btn-danger">
+                    <a href="http://tilt-o-meter.patilla.es/" role="button" type="button" class="btn-lg btn-danger">
                         Go back!
                     </a>
                 </div>
             </div>
         </div>
-        <script type="text/javascript"></script>
     </body>
 </html>
