Edited homepage text, minor style fixes.

--- a/tiltometer/templates/index.html
+++ b/tiltometer/templates/index.html
@@ -36,16 +36,19 @@
             </form>
         </div>
         <hr>
-        <div id="explanation-text" class="lead text-center">
+        <div id="explanation-text" class="lead">
             <p>Welcome to the <a href="{{ host }}" class="tilt-font">tilt-o-meter</a> app. </p>
             <p>Want to know your level of <em>tilt</em> when playing LOL? </p>
             <p>Wanna see if your friend is tilted because of a cold streak?</p>
             <p>Can you bring the <a href="{{ host }}" class="tilt-font">tilt-o-meter</a> to zero before than your friends?</p>
-            <p>Go for it! Play LOL at your best and see if you can bring the meter to its lowest point!</p>
+            <p>Go for it! Play League Of Legends at your best and see if you can bring the meter to its lowest point!</p>
             <hr>
-            <p class="small"><a href="{{ host }}" class="tilt-font">tilt-o-meter</a> is a satirical, personal, project with an arbitrary logarithm. Our goal is to have fun among friends, to try to play at your best each game, and keep the meter as low as possible!</p>
-            <p>This site does not provide real information further than the last games results. This application is  purely a satire, a joke, a laugh and a tool to compete with your friends.</p>
-            <p id="riot-disclaimer" class="small">
+            <p class="small text-center"><a href="{{ host }}" class="tilt-font">tilt-o-meter</a> is a satirical, personal, project with an arbitrary logarithm.</p>
+            <p class="small text-center">Our goal is to have fun among friends, to try to play at your best each game, and keep the meter as low as possible!</p>
+            <hr>
+            <p class="text-center">This site does not provide real information other than the last games results.</p>
+            <p class="text-center">This application is purely a satire, a joke, a laugh and a tool to compete with your friends.</p>
+            <p id="riot-disclaimer" class="small text-center">
                 <small>
                     <em>Tilt-o-meter isn't endorsed by Riot Games and doesn't reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends &copy; Riot Games, Inc.</em>
                 </small>
