--- a/tiltometer/templates/404.html
+++ b/tiltometer/templates/404.html
@@ -21,7 +21,7 @@
                         <p>Oops</p>
                         <p>Something went wrong.</p>
                     {% endif %}
-                    <a href="http://tilt-o-meter.patilla.es/" role="button" type="button" class="btn-lg btn-danger">
+                    <a href="http://tiltometer.lol/" role="button" type="button" class="btn-lg btn-danger">
                         Go back!
                     </a>
                 </div>
