--- a/flaskr/static/css/tiltometer.css
+++ b/flaskr/static/css/tiltometer.css
@@ -17,7 +17,7 @@
  * @license GPL-3.0+ <http://spdx.org/licenses/GPL-3.0+>
 */
 
-#fixed-background {
+/* #fixed-background {
     z-index: -99999;
     position: fixed;
     height: 100%;
@@ -25,7 +25,7 @@
     left:0;
     top:0;
 
-}
+} */
 
 #background-image {
     height: 100%;
