--- a/flaskr/templates/tiltometer.html
+++ b/flaskr/templates/tiltometer.html
@@ -14,7 +14,7 @@
             </p>
         </div><!-- /header -->
         <hr>
-        <div id="content" class="container black-bg">
+        <div id="content" class="container">
 
             <section id="tiltometer-section" class"text-center ">
                 <p>Tilt: {{data.tilt_level}}</p>
